<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bus_buddy_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_tracker"
            app:destination="@id/navigation_tracker"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_navigation_home_to_navigation_log_in"
            app:destination="@id/navigation_log_in"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_navigation_home_to_navigation_user_info"
            app:destination="@id/navigation_user_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tracker"
        android:name="com.example.bus_buddy_app.ui.tracker.TrackerFragment"
        android:label="@string/title_tracker"
        tools:layout="@layout/fragment_tracker" />

    <fragment
        android:id="@+id/navigation_bus_driver_info"
        android:name="com.example.bus_buddy_app.ui.bus_driver_info.BusDriverFragment"
        android:label="@string/title_driver"
        tools:layout="@layout/fragment_driver_info" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.example.bus_buddy_app.ui.logs.LogFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_log_in"
        android:name="com.example.bus_buddy_app.ui.log_in.LogInFragment"
        android:label="@string/title_log_in"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_navigation_log_in_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_user_info"
        android:name="com.example.bus_buddy_app.ui.user_info.UserInfoFragment"
        android:label="@string/title_user_info"
        tools:layout="@layout/fragment_user_info" >
        <action
            android:id="@+id/action_navigation_user_info_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_navigation_user_info_to_navigation_log_in"
            app:destination="@id/navigation_log_in"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_alert"
        android:name="com.example.bus_buddy_app.ui.alert.AlertFragment"
        android:label="@string/title_alert"
        tools:layout="@layout/fragment_alert" />

</navigation>